create github pages

--- a/Employers.html
+++ b/Employers.html
@@ -20,16 +20,14 @@
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-5e">
@@ -84,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
+<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
 
     
 
@@ -111,11 +109,11 @@
     <div class="container">
         <div class="media-container-column mbr-white p-5 align-left col-lg-8 col-md-10">
             <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                الشركات والمؤسسات</h1>
-            <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2">البحث فى قاعدة البيانات الحالية وبنك السيرة الذاتية عن عمال وموظيفن</h3>
+                Employers</h1>
+            <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2">Search and add required jobs in the labour market information system</h3>
             <p class="mbr-text pb-3 mbr-fonts-style display-5">Search, find and add required jobs for your company&nbsp;</p>
-            <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://mobirise.co">إضافة وظيفة مطلوبة</a>
-                <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">البحث</a></div>
+            <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://mobirise.co">Add required jobs</a>
+                <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">Search</a></div>
         </div>
     </div>
 
@@ -467,7 +465,7 @@
 
      
 
-    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:Ej41IEhvZGEgU2hhYXJhd3ksIEJhYiBBbCBMb3VxLCBBYmRlZW4sIENhaXJvIEdvdmVybm9yYXRlLCBFZ3lwdCIaEhgKFAoSCaMIPvK4QFgUET4r62S_EI6fEAU" allowfullscreen=""></iframe></div>
+    <div class="google-map"></div>
 </section>
 
 <section class="cid-rCyemxiVtu" id="footer1-5n">
@@ -564,18 +562,16 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script async src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script async src="assets/tether/tether.min.js"></script>
   <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script async src="assets/parallax/jarallax.min.js"></script>
-  <script async src="assets/tether/tether.min.js"></script>
+  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
+  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script async src="assets/theme/js/script.js"></script>
-  <script async src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
