--- a/Employment.html
+++ b/Employment.html
@@ -12,25 +12,21 @@
   <title>Employment</title>
   <link rel="preload" as="style" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
 <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="preload" as="style" href="assets/font-awesome/css/font-awesome.css">
-<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-grid.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-t">
@@ -85,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-u">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-u">
 
     
 
@@ -111,13 +107,13 @@
 
     <div class="container">
         <div class="media-container-column mbr-white col-lg-8 col-md-10">
-            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">نظام معلومات سوق العمل</h1>
+            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">Labour Market Inforamtion System</h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><span style="font-style: normal;"><strong>
-                منظومة التوظيف والتشبيك</strong></span></h3>
+                Recruiting and Match making</strong></span></h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
-                يعمل نظام معلومات سوق العمل على ايجاد فرص عمل من خلال البحث العام من الوظائف المطلوبة على مستوى الجمهورية ويوفرها للبحاثيين من خلال هذه الصفحة مع وجود متابعة على الارض لهذة النظومة حسب المكان التى تعمل منه او المكان الذى تم عرض الوظيفة لدية</p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="page13.html#footer6-6g">ادخال السيرة الذاتية<br></a>
-                <a class="btn btn-md btn-black-outline display-4" href="page17.html#footer6-6w">البحث عن وظيفة</a></div>
+                Search for a new job or update your CV using the LMIS with the integrated supporting tools between job search, offered training and career guidance and conciling&nbsp;</p>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="page13.html#footer6-6g">CV Add/Update<br></a>
+                <a class="btn btn-md btn-black-outline display-4" href="page17.html#footer6-6w">Job Search</a></div>
         </div>
     </div>
 
@@ -224,7 +220,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yTsxMALY1XrTWlhvv+Iq+K8+Jr4JLdnAfyMG4tRnYg/B59anEV71GvK8A3rRg8wvjYwBrm20+lpEcG05sbyoFYjOv6oC0Wm6oAlMzwjGIdylMBdvmjZFvR9KYQkKHjmV.Ohbe7EHwTpdTy2UmmlcR9sKyDFDgANY3MBiToc4DZpAH5wsujiyZdcw9b7b35wt0gzPUsLyeexamDkP79xYu8GUnnbXAnnyUr5lBNLKgDs2ApiW2WQdId4+rJwCxCGRr">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TO3rUkjkJwgqTq3yy6qdTeXAIYLT5/O9ceR7OnyxQrGmv0z6spVMEOW9duIKPuDDCDlx/kgmgBxhcwxhmQhXRfJy7y34w2ZdxSf+N3+6jSSH2pYheGKrhEdHa+Y3oLjr">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -260,7 +256,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PVhj6HKzSmAMJPt2onDbvh4Zz9VWQgIleTIurIFtoZG8MTiaYcqogngomodhK4ZUnTdR/jYkMy/gPusXakw1ZKuKJxH4jWPErZWxgq63DDhri51NKKQ/U7WiBtnr63af.sN1x0QnN72HqAm/jaXb/M2cC+1amJQu8xh3gcLchq3bT9SAv/9mMOixMc9Aqapa97moneF8U013RWVcu+dbMKRd46IbT+aM2rxcaYRetfyMOZrJqdbs9g0+jq8xPueks">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ywonoWzFWaGwn6Y9cQYRPGVGISPwEdN2v4Npe81owAc2OM0v8uqvG+e5pyTp+X+DBcq3DmSUQLV2meLO8ED6Dl+A7jODnukYhuhvSNLIxdharGpsJ2PMUK9b3UMiMeuE">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -550,6 +546,5 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
