--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -28,12 +28,10 @@
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-rCGl02FmYT" once="menu" id="menu1-6m">
@@ -88,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -112,7 +110,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jx05h3yJlpIT33gkq3+x1wNHe6QSbAt4fiZGFYfU9WouZ/zInC4w63B+YEj0Pj7BFRNebUPVG8Enyftx/8R2UZQU56X+OWCofnd/aW0wREzzBqR12hyfpQaPI6MpU905.f6n0ohkfl9ce93D9CORDH81ufD0zFOmsu39GiDzMxpp6WUDLpIR+j9PPZgpF3ly5ISqY5qKzIIis7DaaJ916k4qILHHF5rTgPWQW7v1qAEnSb2rkLVaWyP6F7v2P88ll">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="II/3Wke9KA87GDZDk6ipl9Z/lyG46Bzyk6AM9/Gc7Wevan2VPFYQ2DaJau0hnD9d4thfg0iVnzpEyGWhZM3V9y9k61OECKgGFLGcHM/wESFULN843h0moezu2S3vxsrP">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -236,6 +234,5 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
