--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -27,12 +27,10 @@
   <link rel="stylesheet" href="assets/datatables/data-tables.bootstrap4.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-rDq2pWFCKM" once="menu" id="menu1-7f">
@@ -87,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -111,7 +109,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="T1PD3822H53JeAF2gQPmxmEuXrcYn7pYGOssyB9NIjLfUObv9AkzrNGJCagJcEjdFTlCuySfAR5o3S+pP8MRRcjJpclyRc3Vmve3KidmlEVElXqckGq/1ytPOBAieVzh.ZsdwyB6TB/tVRf8jiTqxMH3Vsc5iEBQ5ghq39AcBnEBYxQ4s3zBUCmSqWSXqklpTPVAGytbAJ1SftLxDve6+HnSdSgtDr0CtFFbbNUK6ZlfDgXRMrsY5HEUuurOr1t9e">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="k6kz+/jWi87dhAjVPaXwhJFBmZYbKyIZsQT8Cl4Uf9ZBGyzHtyJCmvBT8yHr7H6lYs0AlWyzQRb6p6Bm3ySRNb1FCB9i3fkFeQnxNloMcg7DEpFlV4cAOV3I7+4a/mdw">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -310,6 +308,5 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
