--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -27,12 +27,10 @@
   <link rel="stylesheet" href="assets/datatables/data-tables.bootstrap4.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-rDq1AEdohN" once="menu" id="menu1-7a">
@@ -87,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -111,7 +109,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qfDeJQUyhwbzdYos3HAQ+WxvCi7kEuw+FgD54kHRS00NgBeHupqvKQv7U/J9cae5bdA4exCAI6kry2C+90ACs/tcBxMQ+KXYpaTE7EBadLbAw+dYXoOMIu6zRdMPvNVb.v+1evvKBTRKsi8D6Os6ywau9WOqR8DdO94FQMbOX70gw23SLZm/Ewuru760neJUxrWE5OK+ML+a3AtDrWIcfgocCELtBZb0nOpO/duptIj2f+xfXG43uXwGHgY1xLIM0">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="XKDWGphisLAf9jxQkNqxDYI6Ij0XkWk44ffo99iNaKXGwBnekX0J40x41RXyB+WVEK72joD8tLe95sVYQj+UpYAdJXNjD2T1XDX5W/HbAQIT/c+M7ApdTzAXB3z5rfU7">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -310,6 +308,5 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
