--- a/career.html
+++ b/career.html
@@ -19,16 +19,14 @@
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-19">
@@ -83,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1a">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1a">
 
     
 
@@ -109,11 +107,11 @@
 
     <div class="container">
         <div class="media-container-column mbr-white col-lg-8 col-md-10">
-            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">نظام معلومات سوق العمل</h1>
+            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">Labour Market Information System</h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><span style="font-style: normal;"><strong>
-                الارشاد والتوجية الوظيفى</strong></span></h3>
+                Career Guidance and Counciling&nbsp;</strong></span></h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
-                هناك استراتجية وسياسات تحت التطبيق لتعميم منظومة الارشاد الوظيفى فى المدارس والمصانع والشركات وربط النظومة بين الطالب والخريج واولياء الامور لمساعدة الخريج او الباحث عن الوظيفة فى ايجاد وظيفة مناسبة وملائمة لخبراتة أو ارشادة لزيادة هذه الخبرات - كما تحتوى المنظومة على تقييم ذاتى الكترونى ومساعدات لتحسين السيرة الذاتية وغيره من الادوات الحديثة فى التقييم والارشاد الوظيفى ويمكن التعرف أكثر من خلال الفيديو الاسترشادى</p>
+                As paer to the LMIS, CGS or Career Guidance System is an important tool that support the creation of job opportunies by guiding the job seekers into many direction among these are self-asses and CV improving in addition to other services online and face to face</p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="page13.html#footer6-6g">السيرة الذاتية<br></a>
                 <a class="btn btn-md btn-primary display-4" href="page14.html#footer6-6j">التقييم الذاتى</a></div>
         </div>
@@ -484,18 +482,16 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script async src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script async src="assets/tether/tether.min.js"></script>
   <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script async src="assets/parallax/jarallax.min.js"></script>
-  <script async src="assets/tether/tether.min.js"></script>
+  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
+  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script async src="assets/theme/js/script.js"></script>
-  <script async src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
