--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
   <meta name="description" content="">
   
   <title>Home</title>
-  <link rel="preload" as="style" href="assets/icon54/style.css">
-<link rel="stylesheet" href="assets/icon54/style.css">
-  <link rel="preload" as="style" href="assets/icon54-v4/style.css">
-<link rel="stylesheet" href="assets/icon54-v4/style.css">
   <link rel="preload" as="style" href="assets/web/assets/mobirise-icons2/mobirise2.css">
 <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="preload" as="style" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -24,19 +20,17 @@
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/as-pie-progress/css/progress.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/as-pie-progress/css/progress.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-0">
@@ -91,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header10 cid-rExsQkiqM5 mbr-fullscreen mbr-parallax-background" id="header10-8i">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="header10 cid-rExsQkiqM5 mbr-fullscreen mbr-parallax-background" id="header10-8i">
 
     
 
@@ -1184,7 +1178,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJ09qNnLhAWBQRo5N7CyE8paM" allowfullscreen=""></iframe></div>
+                <div class="google-map"></div>
             </div>
             <div class="col-md-6">
                 <h2 class="pb-3 align-left mbr-fonts-style display-2">
@@ -1208,7 +1202,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lIxzwz2F1TxYf/1lLuOb7QJOKThW2YehxG7Hqq6TT1QTR5wNix0LThKCOg+Gd7rcIzVBuXnMLT9JMvFVFWMY9FXSnmvAqpCGfgH8e/YekrBXtQuSWrnlxvEv5duvMB+B.iNBtwpgVWazdf5UOY6XKNYu0UW41Ob1vZTtH72dXgLSnFnx5LwVa8B+Houl6/JjUM1CXSi0hjcTapysLLol/d+kqBWsbFOBJPED2sdYnkYaykT99KH3roY6zzEA9XlKe">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GPrlBZAgcRDkVa1tFxvsu8/wV680ob6YnaSujiI/2JjtUw80sdMCxIbekS+qjeAFv9H+/uu08LYMRzsUOj/R6gx/tMkxVGEaBYxmaPeYdElUwcJaJs8dVsdyYrTmhLsb">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -1348,20 +1342,20 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script async src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
+  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script async src="assets/parallax/jarallax.min.js"></script>
-  <script async src="assets/sociallikes/social-likes.js"></script>
   <script async src="assets/tether/tether.min.js"></script>
+  <script async src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>
   <script async src="assets/mbr-popup-btns/mbr-popup-btns.js"></script>
   <script async src="assets/masonry/masonry.pkgd.min.js"></script>
   <script async src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script async src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
-  <script async src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>
+  <script async src="assets/sociallikes/social-likes.js"></script>
   <script async src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
-  <script async src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script async src="assets/theme/js/script.js"></script>
   <script async src="assets/slidervideo/script.js"></script>
   <script async src="assets/gallery/player.min.js"></script>
@@ -1371,6 +1365,5 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
