--- a/CV01.html
+++ b/CV01.html
@@ -22,17 +22,15 @@
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
   <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-6f">
@@ -87,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
 
     
 
@@ -111,7 +109,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="tlqp3CPkTfbU943deM2laa567J5JN3CS6ok/3CjLcpORqQfG3wASy1Rnz+mhlcr0is3rCITuvJGc1L4+Cr/ib5KXlp7suotnKkloNTc1eD1kKLP3Io5PY//gH5+HlR4k.NvS1hmJ9txjOqexN68DZvpizoCnjooBMCRd/VwLk3rPOy4bHTQSY8HV+RqNZTONjTOkhyVobBxeUQP5sXXwOQNCAqDsZIMIqyb5j6sPS58k2f85g7ib4ADK7ODQt1HuJ">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="fbK3+MGOKJFz4WvO80nEQWDYonOTqC5/yOosvV03VBTP3tJsiLdLG3aD8NLfF5XmO44b/tBtmFsUubHk1lOY/zjlgZhnYEoVroK7O4M9/nY4YAs+OQAVJgyiITBTkPDa">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -160,18 +158,17 @@
   <script async src="assets/smoothscroll/smooth-scroll.js"></script>
   <script async src="assets/dropdown/js/nav-dropdown.js"></script>
   <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script async src="assets/tether/tether.min.js"></script>
   <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script async src="assets/formstyler/jquery.formstyler.js"></script>
   <script async src="assets/formstyler/jquery.formstyler.min.js"></script>
   <script async src="assets/datepicker/jquery.datetimepicker.full.js"></script>
+  <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script async src="assets/theme/js/script.js"></script>
   <script async src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
