--- a/Education.html
+++ b/Education.html
@@ -12,25 +12,21 @@
   <title>Education</title>
   <link rel="preload" as="style" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
 <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="preload" as="style" href="assets/font-awesome/css/font-awesome.css">
-<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-grid.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-rCGl02FmYT" once="menu" id="menu1-60">
@@ -85,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-61">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-61">
 
     
 
@@ -335,7 +331,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wm2uj2WjWFIT4GRtYAFl+ZAl0EPPElCpc50gNU8+aB5ihhwaYHnjKbY/OrXJYMw7q6E+H/Ipd1yUBtdyLxMM0Q5JA5HiQYYkSbffXN6ZiUOMvPt9mHNdIStfDc1RFyX5.u875o+KjA6qMrYYGaH8dGvuECspmCIWo7MrtFiexO9vGGMwYuAQv27wX0vdLI1GU9RLXb+JQJF/IpqH9ovaW38TmZ7kvD+UVPFDkvQKzUvH/A11+HqkqcU94ryjFZxP5">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0DbjCZmjq4ruyPz/LTaAnrplb3ac4qYDfVFUH1hINoBgWBI7UTWxTsjh8XGGa+lEsGdZ76x7UljosbgMj8vwX+6elG2AT2rnOKlur6gIWmBALlceb667ceQQpEVshyhY">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -408,6 +404,5 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
