--- a/JobAdd.html
+++ b/JobAdd.html
@@ -27,12 +27,10 @@
   <link rel="stylesheet" href="assets/datatables/data-tables.bootstrap4.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-70">
@@ -87,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -111,7 +109,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Qko5Ju8me/av3jhyVabg1W1ZdEwZYWWpXNfGeAw9oKOjBd8zpIl+lDLYn1pzoyQxun9uJGSW8lEuZNr5llpxLwbTiSJbf5B9FyVOKaDaSEN377jnzsmb7OTri8WeFoJM.R9QvNcUR4zGwt/0mtaGfExZN4wl3R7XySlW1IHBRejxIbwbvKVcO69opPz6fenjzRl95fZi7o/MzStYlzlLKVnSXURo8vHGmy33rkzNn3+Z0an9wQbqWYvl+nXEW13mB">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="hIxwiDf7/4HD/0AXSsg1aEXjWFKgbZjmBh+OXRTffYsWr7CQ7hI+AbvfvPZPN6e/ZhI+KBPnxDWsBb4sPJEz3mrGrR9IzA1SLDRPwyNpukyyfKlEgsdAFyNCF2ObcKRd">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -300,6 +298,5 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
