--- a/SchoolToLaborReport.html
+++ b/SchoolToLaborReport.html
@@ -18,17 +18,15 @@
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/datatables/data-tables.bootstrap4.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-rCGl02FmYT" once="menu" id="menu1-6r">
@@ -83,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
 
     
 
@@ -276,20 +274,18 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script async src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script async src="assets/tether/tether.min.js"></script>
+  <script async src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script async src="assets/datatables/jquery.data-tables.min.js"></script>
   <script async src="assets/datatables/data-tables.bootstrap4.min.js"></script>
+  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
+  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script async src="assets/theme/js/script.js"></script>
-  <script async src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
