--- a/Social.html
+++ b/Social.html
@@ -18,16 +18,14 @@
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-r">
@@ -82,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-s">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-s">
 
     
 
@@ -255,7 +253,7 @@
 
      
 
-    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:Ej41IEhvZGEgU2hhYXJhd3ksIEJhYiBBbCBMb3VxLCBBYmRlZW4sIENhaXJvIEdvdmVybm9yYXRlLCBFZ3lwdCIaEhgKFAoSCaMIPvK4QFgUET4r62S_EI6fEAU" allowfullscreen=""></iframe></div>
+    <div class="google-map"></div>
 </section>
 
 <section class="mbr-section form1 cid-rCm8NlVbwe" id="form1-12">
@@ -279,7 +277,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HYNPMxFqdEJM1wUmSX2BQGj4eQjr0CzhF2ku7JRTlfxd1dZB/sHHBB80m6wYnHXNbq5hYIAFOm6p3aI38PWK3jrPaaCi+QtFZsoqCY8bhoM/VfOG0kn1UaCdTLo26dp4.V/p20AT3Qv0EZ/Nsb/7up8U2f12gFHgd/ot4icnJpKtC6OUd7wRwTOPH+4E9MEQcFs1z6nT+7Aa8DwqPhlA5tNY+tjXt7jUz8HrGqWtcYW23e/IdrTB5u7RLvUoXhdN1">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SKsZf3d+VYTh+e5CzGxPgha3LQC3XhlK7nD/uhbqBwCM2JPA3LAkIDVuWUq5kaYmeytq7L0oVJlSNXRdGgDvLsplGu9ji6QSZ1NyQcm/1y61dNSvYPDaVIuAwTY4oPAB">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -316,10 +314,10 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script async src="assets/smoothscroll/smooth-scroll.js"></script>
   <script async src="assets/dropdown/js/nav-dropdown.js"></script>
   <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script async src="assets/tether/tether.min.js"></script>
   <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script async src="assets/parallax/jarallax.min.js"></script>
@@ -331,6 +329,5 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
