--- a/training.html
+++ b/training.html
@@ -19,16 +19,14 @@
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-17">
@@ -83,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
@@ -361,7 +359,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJ09qNnLhAWBQRo5N7CyE8paM" allowfullscreen=""></iframe></div>
+                <div class="google-map"></div>
             </div>
         </div>
         <div class="footer-lower">
@@ -404,18 +402,16 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script async src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script async src="assets/tether/tether.min.js"></script>
   <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script async src="assets/parallax/jarallax.min.js"></script>
-  <script async src="assets/tether/tether.min.js"></script>
+  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
+  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script async src="assets/theme/js/script.js"></script>
-  <script async src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
